# bensalem

./: .gitignore  CHANGELOG.md  README.md  bensalem.cabal  flake.nix  scriba-ml.cabal  scriba.cabal
doc/: design.md  manual.scb
frontend/: README.md  package-lock.json  package.json
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/document/: +page.svelte
src/Bensalem/Markup/BensalemML/: Core.hs  Interpreter.hs  Lexer.x  LexerActions.hs  Name.hs  Parser.y  ParserDefs.hs  Syntax.hs  Token.hs  WiredIn.hs
src/Bensalem/Markup/BensalemML/Syntax/: Intermediate.hs
src/Scriba/Markup/ScribaML/: Lexer.hs  Lexer.x  LexerActions.hs  LexerUtils.hs  OtherLexer.x  Parser.y  ParserDefs.hs  ParserUtils.hs  Syntax.hs  Token.hs
src/Scriba/Markup/ScribaML/Syntax/: Intermediate.hs
test/: Spec.hs
test/Bensalem/Markup/BensalemML/: CoreSpec.hs  InterpretSpec.hs  SyntaxSpec.hs  TokenSpec.hs
test/Scriba/Markup/ScribaML/: SyntaxSpec.hs  TokenSpec.hs
test/Test/: Common.hs
test/golden/Bensalem/Markup/BensalemML/CoreSpec/: simple-doc.bsm  simple-doc.golden
test/golden/Bensalem/Markup/BensalemML/InterpretSpec/: riemann.bsm  riemann.html
test/golden/Bensalem/Markup/BensalemML/SyntaxSpec/: indent1.golden  indent1.scb  indent2.golden  indent2.scb  inline-full.bsm  inline-full.golden  inline-with-arg.bsm  inline-with-arg.golden  inline-with-attrs.bsm  inline-with-attrs.golden  layout-nested.bsm  layout-nested.golden  layout-simple.bsm  layout-simple.golden  level-blank-1.bsm  level-blank-1.golden  level-blank-2.bsm  level-nested.bsm  level-nested.golden  level-simple.bsm  level-simple.golden  simple-inlines.bsm  simple-inlines.golden  verbatim.bsm  verbatim.golden
test/golden/Bensalem/Markup/BensalemML/TokenSpec/: level-closing-layout-1.golden  level-closing-layout-1.input  level-closing-layout-2.golden  level-closing-layout-2.input  simple-attrs.golden  simple-attrs.input  simple-tokens.golden  simple-tokens.input  token.scb  verbatim.golden  verbatim.input
test/golden/Scriba/Markup/ScribaML/SyntaxSpec/: indent1.scb
test/golden/Scriba/Markup/ScribaML/TokenSpec/: token.golden  token.input
