cabal-version:       3.4
name:                bensalem
version:             0.0.1
synopsis:            Markup language, publishing, and library system tools
license:             BSD-2-Clause
license-file:        LICENSE
author:              Christian Despres
maintainer:          Christian Despres <christian.j.j.despres@gmail.com>
copyright:           Copyright 2021 Christian Despres
category:            Text
extra-source-files:
  CHANGELOG.md
  README.md

common base
  default-language: Haskell2010
  ghc-options: -Wall -Wextra
  build-depends: base >=4.13 && <5

library
  import: base
  hs-source-dirs: src
  build-depends:
    array,
    containers,
--    megaparsec,
    mtl,
    -- prettyprinter,
    text,
  build-tool-depends:
    alex:alex,
    happy:happy
  exposed-modules:
    Bensalem.Markup.BensalemML.Lexer
    Bensalem.Markup.BensalemML.LexerActions
    Bensalem.Markup.BensalemML.Name
    Bensalem.Markup.BensalemML.Parser
    Bensalem.Markup.BensalemML.ParserDefs
    Bensalem.Markup.BensalemML.Syntax
    Bensalem.Markup.BensalemML.Token
    Bensalem.Markup.BensalemML.WiredIn

test-suite test
  import: base
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    test
  build-depends:
    QuickCheck,
    bytestring,
    pretty-simple,
    bensalem,
    tasty,
    tasty-golden,
    tasty-hunit,
    text,
  other-modules:
    Bensalem.Markup.BensalemML.SyntaxSpec
    Bensalem.Markup.BensalemML.TokenSpec
    Test.Common
